@@ -1,3 +1,7 @@
+2008-02-27 Brian Matherly <brian@gramps-project.org>
+	* src/plugins/NarrativeWeb.py:
+	Cleanup.
+
 2008-02-28 Jim Sack <jgsack@san.rr.com>
 	* src/GrampsDbUtils/_GedcomParse.py minor: remove redundant
 	counting of errors dating to r8912 patch, I think. I don't believe
